# dpm

./: .gitignore  CHANGELOG.md  README.md  args.go  build.sh  dpm.sh  fetch.go  file.json  generators.go  go.mod  go.sum  help.go  install.go  install.sh  main.go  misc.go  mkdocs.yml  model_examples.py  package.json  parse_args.go  publish.go  pyproject.toml  settings_unix.go  settings_windows.go  setup.cfg  templates.py  types.go  uninstall.go  utils.go
alias/: alias.go
args/: args.go  help.go  parse_args.go
changelog/: changelog.go
docs/: index.md
dpm/: install.py
dpm/pyrinth/: projects.py
modrinth/: fetch.go  install.go  link.go  publish.go  uninstall.go
project/: project.go
pyrinth/: install.py  models.py  modrinth.py  projects.py  users.py  util.py
releases/: v1.0.0.md
settings/: settings.go  settings_unix.go  settings_windows.go
src/: misc.py  models.py  modrinth.py  projects.py  users.py
src/dpm/: dpm.py  generators.py  help.py  install.py  parse_args.py  publish.py  util.py
src/pyrinth/: __init__.py  models.py  modrinth.py  projects.py  users.py  util.py
types/: types.go
utils/: pack_format.go  utils.go
