[metadata]
name = pyrinth
version = 1.0.0
author = RevolvingMadness
author_email = revolvingmadn@gmail.com
description = A Python library that interacts with the Modrinth API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RevolvingMadness/Pyrinth
project_urls =
    Bug Tracker = https://github.com/RevolvingMadness/Pyrinth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src